if(BUILD_CMARK_PLUGIN)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(CMARK QUIET libcmark>=0.28.3)
    if(NOT $CMARK_FOUND)
        message("cmark not found")
        set(BUILD_CMARK_PLUGIN OFF)
    endif(NOT $CMARK_FOUND)
endif(BUILD_CMARK_PLUGIN)

if(BUILD_CMARK_PLUGIN)
    add_subdirectory(cmark)
    message("Building cmark-plugin")
else()
    message("Not building cmark-plugin")
endif(BUILD_CMARK_PLUGIN)

if(BUILD_CMARK_GFM_PLUGIN)
    add_subdirectory(cmark-gfm)
    message("Building cmark-gfm-plugin")
else()
    message("Not building cmark-gfm-plugin")
endif(BUILD_CMARK_GFM_PLUGIN)

if(BUILD_DUMMY_PLUGIN)
    add_subdirectory(dummy)
    message("Building dummy-plugin")
else()
    message("Not building dummy-plugin")
endif(BUILD_DUMMY_PLUGIN)

add_subdirectory(github-markdown-css)

if(BUILD_GITHUB_ONLINE_PLUGIN)
    add_subdirectory(github-online)
    message("Building github-online-plugin")
else()
    message("Not building github-online-plugin")
endif(BUILD_GITHUB_ONLINE_PLUGIN)

if(BUILD_HOEDOWN_PLUGIN)
    add_subdirectory(hoedown)
    message("Building hoedown-plugin")
else()
    message("Not building hoedown-plugin")
endif(BUILD_HOEDOWN_PLUGIN)

if(BUILD_QTWEBENGINEPDF_PLUGIN)
    add_subdirectory(qtwebenginepdf)
    message("Building qtwebenginepdf-plugin")
else()
    message("Not building qtwebenginepdf-plugin")
endif(BUILD_QTWEBENGINEPDF_PLUGIN)

if(BUILD_SUNDOWN_PLUGIN)
    add_subdirectory(sundown)
    message("Building sundown-plugin")
else()
    message("Not building sundown-plugin")
endif(BUILD_SUNDOWN_PLUGIN)

